# lgess

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  hacs.json  pyproject.toml  strings.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  RELEASE_CHECKLIST.md  funding.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml  docs.yaml  greetings.yaml
custom_components/lgess/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  device.py  diagnostics.py  entity.py  manifest.json  models.py  parser.py  sensor.py
custom_components/lgess/translations/: en.json
tests/: conftest.py  test_api.py  test_api_live.py  test_config_flow.py  test_graph_day.py  test_models.py  test_parser.py  test_sensor_logic.py  test_smoke.py
tests/data/: graph_day.json  graph_month.json  home.json
